test/mutation_analysis/s0561_array_partition_i/hafis/starchat/mutants/6/result.txt
./test/mutation_analysis/s0561_array_partition_i/hafis/starchat/mutants/6/Solution.java:18: error: unreachable statement
        for (int i = 0; false; i = i + 2) {
                                          ^
1 error
